--- a/PyCitySchools/PyCitySchools_ultimate.ipynb
+++ b/PyCitySchools/PyCitySchools_ultimate.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,7 @@
        "4             97          84          0  District  2917  1910635  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +183,7 @@
        "15"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +205,7 @@
        "39170"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +227,7 @@
        "24649428"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +258,7 @@
        "78.98537145774827"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +280,7 @@
        "81.87784018381414"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +302,7 @@
        "74.9808526933878"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +325,7 @@
        "85.80546336482001"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +348,7 @@
        "65.17232575950983"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +422,7 @@
        "0               81.87784       74.980853          85.805463          65.172326  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -854,7 +854,7 @@
        "Wright High School             96.611111          90.333333  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -892,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {
     "scrolled": true
    },
@@ -1040,7 +1040,7 @@
        "Pena High School             90.540541  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1060,7 +1060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1206,7 +1206,7 @@
        "Johnson High School            81.222432          53.539172  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1226,7 +1226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1385,7 +1385,7 @@
        "Wright High School     83.264706  84.010288  83.836782  83.644986"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1428,7 +1428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1587,7 +1587,7 @@
        "Wright High School     83.833333  83.812757  84.156322  84.073171"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1631,7 +1631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1642,7 +1642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1652,7 +1652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1993,7 +1993,7 @@
        "Wright High School                            <$585  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2011,7 +2011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2025,7 +2025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -2066,6 +2066,14 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
+       "      <th>&lt;$585</th>\n",
+       "      <td>83.455399</td>\n",
+       "      <td>83.933814</td>\n",
+       "      <td>93.460096</td>\n",
+       "      <td>96.610877</td>\n",
+       "      <td>90.369459</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>$585-630</th>\n",
        "      <td>81.899826</td>\n",
        "      <td>83.155286</td>\n",
@@ -2089,14 +2097,6 @@
        "      <td>81.133951</td>\n",
        "      <td>53.526855</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>&lt;$585</th>\n",
-       "      <td>83.455399</td>\n",
-       "      <td>83.933814</td>\n",
-       "      <td>93.460096</td>\n",
-       "      <td>96.610877</td>\n",
-       "      <td>90.369459</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -2104,27 +2104,27 @@
       "text/plain": [
        "                               Average Math Score  Average Reading Score  \\\n",
        "Spending Ranges (Per Student)                                              \n",
+       "<$585                                   83.455399              83.933814   \n",
        "$585-630                                81.899826              83.155286   \n",
        "$630-645                                78.518855              81.624473   \n",
        "$645-680                                76.997210              81.027843   \n",
-       "<$585                                   83.455399              83.933814   \n",
        "\n",
        "                               % Passing Math  % Passing Reading  \\\n",
        "Spending Ranges (Per Student)                                      \n",
+       "<$585                               93.460096          96.610877   \n",
        "$585-630                            87.133538          92.718205   \n",
        "$630-645                            73.484209          84.391793   \n",
        "$645-680                            66.164813          81.133951   \n",
-       "<$585                               93.460096          96.610877   \n",
        "\n",
        "                               % Overall Passing  \n",
        "Spending Ranges (Per Student)                     \n",
+       "<$585                                  90.369459  \n",
        "$585-630                               81.418596  \n",
        "$630-645                               62.857656  \n",
-       "$645-680                               53.526855  \n",
-       "<$585                                  90.369459  "
+       "$645-680                               53.526855  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2138,7 +2138,7 @@
     "    \"% Passing Reading\" : spending_passing_reading,\n",
     "    \"% Overall Passing\" : overall_passing_spending\n",
     "}\n",
-    "spending_summary = pd.DataFrame(spending_summary_data)\n",
+    "spending_summary = pd.DataFrame(spending_summary_data).sort_values(by=\"% Overall Passing\", ascending=False)\n",
     "\n",
     "# Display results\n",
     "spending_summary"
@@ -2153,7 +2153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2164,7 +2164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2174,7 +2174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -2515,7 +2515,7 @@
        "Wright High School     Medium (1000-2000)  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2533,7 +2533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2547,7 +2547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {
     "scrolled": true
    },
@@ -2631,7 +2631,7 @@
        "Small (<1000)               96.099437          89.883853  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2661,7 +2661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2675,7 +2675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -2747,7 +2747,7 @@
        "District             80.799062          53.672208  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
