--- a/PyCitySchools/PyCitySchools_ultimate.ipynb
+++ b/PyCitySchools/PyCitySchools_ultimate.ipynb
@@ -2025,7 +2025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -2066,14 +2066,6 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>&lt;$585</th>\n",
-       "      <td>83.455399</td>\n",
-       "      <td>83.933814</td>\n",
-       "      <td>93.460096</td>\n",
-       "      <td>96.610877</td>\n",
-       "      <td>90.369459</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>$585-630</th>\n",
        "      <td>81.899826</td>\n",
        "      <td>83.155286</td>\n",
@@ -2097,6 +2089,14 @@
        "      <td>81.133951</td>\n",
        "      <td>53.526855</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>&lt;$585</th>\n",
+       "      <td>83.455399</td>\n",
+       "      <td>83.933814</td>\n",
+       "      <td>93.460096</td>\n",
+       "      <td>96.610877</td>\n",
+       "      <td>90.369459</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -2104,27 +2104,27 @@
       "text/plain": [
        "                               Average Math Score  Average Reading Score  \\\n",
        "Spending Ranges (Per Student)                                              \n",
-       "<$585                                   83.455399              83.933814   \n",
        "$585-630                                81.899826              83.155286   \n",
        "$630-645                                78.518855              81.624473   \n",
        "$645-680                                76.997210              81.027843   \n",
+       "<$585                                   83.455399              83.933814   \n",
        "\n",
        "                               % Passing Math  % Passing Reading  \\\n",
        "Spending Ranges (Per Student)                                      \n",
-       "<$585                               93.460096          96.610877   \n",
        "$585-630                            87.133538          92.718205   \n",
        "$630-645                            73.484209          84.391793   \n",
        "$645-680                            66.164813          81.133951   \n",
+       "<$585                               93.460096          96.610877   \n",
        "\n",
        "                               % Overall Passing  \n",
        "Spending Ranges (Per Student)                     \n",
-       "<$585                                  90.369459  \n",
        "$585-630                               81.418596  \n",
        "$630-645                               62.857656  \n",
-       "$645-680                               53.526855  "
+       "$645-680                               53.526855  \n",
+       "<$585                                  90.369459  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2138,7 +2138,7 @@
     "    \"% Passing Reading\" : spending_passing_reading,\n",
     "    \"% Overall Passing\" : overall_passing_spending\n",
     "}\n",
-    "spending_summary = pd.DataFrame(spending_summary_data).sort_values(by=\"% Overall Passing\", ascending=False)\n",
+    "spending_summary = pd.DataFrame(spending_summary_data)\n",
     "\n",
     "# Display results\n",
     "spending_summary"
